# GStreamer-zipdecoder-plugin

./: README.md
gst-plugin/: README  configure.ac  meson.build
gst-plugin/src/: Makefile.am  gstgzdec.c  gstgzdec.h
